fixing footer overlap

--- a/src/App.css
+++ b/src/App.css
@@ -113,7 +113,7 @@ body {
     flex-direction: column;
     align-items: center;
     color: white;
-    height: 120vh;
+    height: 165vh;
     width: 100%;
 }
 
